--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ alert("Success");
 <!-- end of index-->
 <!-- games-->
 <div id="support" class="tabcontent">
-    <iframe allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" oallowfullscreen="true" msallowfullscreen="true" src="file:///C:/Users/aarfan/Desktop/Testing%20-%20Copy/support/index.html"  style="position:fixed; top:50px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:9;"></iframe>
+    <iframe allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" oallowfullscreen="true" msallowfullscreen="true" src="./support/index.html"  style="position:fixed; top:50px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:9;"></iframe>
 </div>
 <!-- end of games-->
 <!-- websites-->
@@ -203,7 +203,7 @@ alert("Success");
 </div>
 <!-- end of the proxy page-->
 <div id="support" class="tabcontent">
-    <iframe allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" oallowfullscreen="true" msallowfullscreen="true" src="file:///C:/Users/aarfan/Desktop/Testing%20-%20Copy/support/index.html"  style="position:fixed; top:50px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:9;"></iframe>
+    <iframe allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" oallowfullscreen="true" msallowfullscreen="true" src="./support/index.html"  style="position:fixed; top:50px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:9;"></iframe>
 </div>
 
 
